# expert_jb

./: .gitignore  Dockerfile  Dockerfile.base  Dockerfile.lora  README.md  build.sh  eval_sft_notebook.py  pyproject.toml  requirements.txt  run.sh  train.py  train_notebook.py  train_sft_notebook.py
eval/: analyze_results.py  generate_sft_dataset.py  jailbreaker_prompt.json  refusals_eval_baseline.py  refusals_eval_jailbroken.py  refusals_eval_r1.py  universal_jailbreaks.json
nb/: Qwen3_(14B)-Reasoning-Conversational.ipynb
pliny_sft/: eval.csv  eval.py  evaluation_results_piped_jailbreaks.csv  finetuner.py  jailbreaks.csv  requirements.txt
sft/: csv_gen.py  eval.py  evaluation_log.txt  evaluation_log_human_jb.txt  human_jb_finetuner.py  pliny_finetuner.py
